# Machines-and-Computability-project

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  PalindroomTM FOUT.xml  cfg1.xml  cfg1Test.xml  cfg2.xml  cfg2Test.xml  cfg3.xml  cfg4.xml  expected.dot  tm1.xml  tm1Test.xml  tm2.xml  tm3.xml  tm4.xml  tm5.xml
doc/: Doxyfile
doc/html/: _c_f_g2_c_n_f_8h_source.html  _c_f_g_8h_source.html  _c_f_g_parser_8h_source.html  _c_y_k_table_8h_source.html  _mini_u_i_8h_source.html  _my_u_i_8h_source.html  _symbol_8h_source.html  _t_m_8h_source.html  _t_m_simulated_state_8h_source.html  _t_m_state_8h_source.html  _t_m_tape_8h_source.html  _t_m_transition_8h_source.html  _turing_machine_8h_source.html  _turing_machine_encoding_converter_8h_source.html  _turing_machine_parser_8h_source.html  _turing_machine_simulator_8h_source.html  annotated.html  build_2include_2_u_t_m_2_c_f_g2_c_n_f_8h_source.html  build_2include_2_u_t_m_2_c_f_g_8h_source.html  build_2include_2_u_t_m_2_c_f_g_parser_8h_source.html  build_2include_2_u_t_m_2_c_y_k_table_8h_source.html  build_2include_2_u_t_m_2_my_u_i_8h_source.html  build_2include_2_u_t_m_2_symbol_8h_source.html  build_2include_2_u_t_m_2dot_8h_source.html  build_2include_2_u_t_m_2finiteautomaton_8h_source.html  build_2include_2_u_t_m_2pugiconfig_8hpp_source.html  build_2include_2_u_t_m_2pugixml_8hpp_source.html  build_2include_2_u_t_m_2util_8h_source.html  class_arc-members.html  class_arc.html  class_c_f_g-members.html  class_c_f_g.html  class_c_f_g2_c_n_f-members.html  class_c_f_g2_c_n_f.html  class_c_f_g_parser-members.html  class_c_f_g_parser.html  class_c_y_k_table-members.html  class_c_y_k_table.html  class_finite_automaton-members.html  class_finite_automaton.html  (+300 more)
doc/html/search/: all_0.js  all_10.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_69.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_77.js  all_7e.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_15.js  classes_3.js  classes_4.js  classes_6.js  classes_66.js  classes_73.js  classes_74.js  classes_9.js  (+29 more)
doc/latex/: annotated.tex  class_arc.tex  class_c_f_g.tex  class_c_f_g2_c_n_f.tex  class_c_f_g_parser.tex  class_c_y_k_table.tex  class_finite_automaton.tex  class_state.tex  class_symbol.tex  classtum_1_1_simulated_state.tex  classtum_1_1_state.tex  classtum_1_1_tape.tex  classtum_1_1_transition.tex  classtum_1_1_turing_machine.tex  classtum_1_1_turing_machine_converter.tex  classtum_1_1_turing_machine_parser.tex  classtum_1_1_turing_machine_simulator.tex  doxygen.sty  refman.tex
information/: README UTM.txt
information/Literature/Less useful/: Turing_Variations.ppt  lecture31.ppt  lecture32.ppt
information/Literature/Useful/: Universal_Turing.ppt
src/: CMakeLists.txt
src/CFG/: CFG.cpp  CFG.h  CFG2CNF.cpp  CFG2CNF.h  CFGParser.cpp  CFGParser.h  CMakeLists.txt  CYK.cpp  CYKTable.cpp  CYKTable.h  Symbol.cpp  Symbol.h
src/MiniUI/: CMakeLists.txt  MiniUI.cpp  MiniUI.h
src/TM/: CMakeLists.txt  TMSimulatedState.cpp  TMSimulatedState.h  TMState.cpp  TMState.h  TMTape.cpp  TMTape.h  TMTransition.cpp  TMTransition.h  TuringMachine.cpp  TuringMachine.h  TuringMachineEncodingConverter.cpp  TuringMachineEncodingConverter.h  TuringMachineParser.cpp  TuringMachineParser.h  TuringMachineSimulator.cpp  TuringMachineSimulator.h
src/automata/: CMakeLists.txt  dot.h  finiteautomaton.cpp  finiteautomaton.h  util.h
src/gtest-1.7.0/: Makefile  cmake_install.cmake
src/pugixml-1.4/: Makefile
src/pugixml-1.4/src/: CMakeLists.txt
test/: CMakeLists.txt  all.cpp  cfg1Test.xml  cfg2Test.xml  cfgTest.cpp  cnfTest.cpp  comparefiles.h  pdaTest.cpp  test.h  tm1Test.xml  tmTest.cpp
tools/: mainCFGParser.cpp  mainCFGtoPDA.cpp  mainCNFtest.cpp  mainCYKTest.cpp  mainTMConverterTest.cpp  mainTMtest.cpp  mainTools_UI.cpp  mainUTMtest.cpp
tools/UTM/: README UTM.txt  UTM Transitions.ods  generateXMLfromTransitionsUTM.py  transitionsUTM.txt  utm.xml
